# exlib

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
examples/chess/: CMakeLists.txt  board.cpp  board.hpp  game_controller.cpp  game_controller.hpp  game_model.cpp  game_model.hpp  game_renderer.cpp  game_renderer.hpp  main.cpp
examples/chess/res/: pieces_image.hpp
include/exlib/: core.hpp  cursor.hpp  exlib.hpp  graphics.hpp  key.hpp  opengl.hpp  types.hpp  user_pointer.hpp  window.hpp
include/exlib/core/: config.hpp  exception.hpp  types.hpp  user_pointer.hpp
include/exlib/graphics/: circle_shape.hpp  conv_shape.hpp  draw.hpp  drawable.hpp  font.hpp  image.hpp  rect_shape.hpp  shape.hpp  sprite.hpp  text.hpp  texture.hpp  transformable.hpp  types.hpp
include/exlib/opengl/: index_buffer.hpp  render.hpp  shader.hpp  tex.hpp  texture.hpp  types.hpp  vertex_array.hpp  vertex_buffer.hpp
include/exlib/window/: cursor.hpp  key.hpp  window.hpp
scripts/: build.bat  build.sh  clean.bat  clean.sh  rebuild.sh
src/: cursor.cpp  key.cpp  main.cpp  user_pointer.cpp  window.cpp
src/core/: types.cpp  user_pointer.cpp
src/graphics/: draw.cpp  font.cpp  image.cpp  shape.cpp  sprite.cpp  text.cpp  texture.cpp  transformable.cpp
src/opengl/: index_buffer.cpp  render.cpp  shader.cpp  shader_uniform.cpp  tex.cpp  texture.cpp  vertex_array.cpp  vertex_buffer.cpp
src/window/: cursor.cpp  key.cpp  window.cpp
tests/: CMakeLists.txt
tests/scripts/: build.sh  clean.bat  rebuild.bat
tests/src/: circle_shape.cpp  conv_shape.cpp  cursor.cpp  draw.cpp  font_and_text.cpp  key.cpp  opengl.cpp  opengl_tex.cpp  opengl_texture.cpp  rect_shape.cpp  rect_shape_performance.cpp  rect_shape_texture.cpp  sprite.cpp  text_performance.cpp  user_pointer.cpp  window.cpp  window_icon.cpp
